Fixed align

--- a/a10/style.css
+++ b/a10/style.css
@@ -6,6 +6,11 @@ html {
     font-family: "Futura","Helvetica", Arial, sans-serif;
 }
 
+body {
+    width: 100%;
+    margin: auto;
+}
+
 .title {
     text-align: center;
     font-weight: 200;
@@ -46,6 +51,7 @@ div {
     max-width: 700px;
     margin: auto;
     box-sizing: border-box;
+    overflow:hidden;
 }
 
 .wrapper {
